colour of HR changed

--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ div {
 /***Horizontal Line Styling****/
 
 .portfolio-line {
-    background: #976123;
+    background: #fcc419;
     width: 25%;
     /* margin: auto; */
     margin-top:5%;
@@ -170,7 +170,7 @@ div {
 }
 
 .portfolio-line-2{
-    background: #976123;
+    background: #fcc419;
     width: 25%;
     /* margin: auto; */
     margin-top:5%;
