--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     margin: 0;
 }
 
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 body {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     /* font-size: 14px; */
@@ -375,21 +379,25 @@ div {
 /*****Contact Section******/
 .contact{
     margin-top: 10rem;
-    width: 50%; /*try this to get items next to each other in flex*/
+    /*try this to get items next to each other in*/
 }
 
 .contact-header{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
+
+    justify-content: space-between;
+    width: 100%;
 }
 
 .contact-form{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 0 auto;
+    max-width: 880px;
+    height: 450px;
+    padding: 10px 0;
+
 }
 
 
@@ -397,14 +405,15 @@ div {
 input[type="text"], input[type="email"], textarea{
     border: none;
     border-bottom: solid 1px #c9c9c9;
-    width: 100%
-    
+    width: 100%;
+    height: 50px;
 }
 
 textarea {
     overflow: hidden;
     resize: none;
     height: 69px;
+
 }
 
 input[type="submit"], li{
