--- a/css/style.css
+++ b/css/style.css
@@ -404,10 +404,20 @@ div {
 
 input[type="text"], input[type="email"], textarea{
     border: none;
-    border-bottom: solid 1px #c9c9c9;
+    border-bottom: solid 2px #c9c9c9;
     width: 100%;
     height: 50px;
+    font-weight: 500;
 }
+
+/*focus select on forms*/
+
+input[type="text"]:focus, input[type="email"]:focus, textarea:focus{
+    outline: none;
+    border-bottom: solid 2px #fcc419;
+    
+}
+
 
 .name-text, .email-text{
     display: inline-block;
@@ -432,6 +442,8 @@ input[type="submit"], li{
 }
 
 input[type="submit"]{
+    margin-top: 20px;
+
     cursor: pointer; 
 
     appearance: none;
@@ -456,4 +468,5 @@ input[type="submit"]{
 input[type="submit"]:hover{
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
     background-color: #fcc419;
+    color: #585858 !important;
 }
