smooth scrolling added

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
     box-sizing: inherit;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     /* font-size: 14px; */
