--- a/css/style.css
+++ b/css/style.css
@@ -536,3 +536,36 @@ input[type="submit"]:hover{
         font-size: 0.8em;
     }
 }
+
+.footer {
+    margin-top: 5rem;
+    
+    padding: 5rem 3rem 5rem 3rem;
+
+    background-color: #1b1b1b;
+    color: #fff;
+    
+    display: flex;
+    justify-content: space-between;
+    gap: 30em;
+}
+
+.footer-text {
+    margin-left: 5rem;
+    padding-right: 15px;
+}
+
+.footer-text h3{
+    font-weight: 500;
+    letter-spacing: 0.2rem;
+}
+
+.social-icons ion-icon{ 
+    font-size: 1.5rem;
+    margin-right: 5rem;
+}
+
+.social-icons ion-icon:hover{ 
+    align-self: flex-end;
+    color:#fcc419;
+}
